# sqbyl

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  sqbyl-design-spec.md  sqbyl-enhancements.md  sqbyl-implementation-plan.md  sqbyl-user-journey.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
case-study/: index.html
cli/: index.html
concepts/: index.html
docs/: case-study.md  cli.md  concepts.md  demo.tape  getting-started.md  index.md  sqbyl-design-spec.md  sqbyl-implementation-plan.md  sqbyl-user-journey.md
docs/guides/: configuration.md  embedding.md
examples/revenue-analytics/: instructions.md  sqbyl.yaml
examples/revenue-analytics/benchmarks/: dev.yaml  test.yaml
examples/revenue-analytics/examples/: revenue.yaml
examples/revenue-analytics/judges/: answer_quality.md  completeness.md  logical_accuracy.md  semantic_equivalence.md
examples/revenue-analytics/semantics/: customers.yaml  orders.yaml
examples/revenue-analytics/trusted/: mrr.sql
fixtures/: build_orders_duckdb.py  orders.duckdb
getting-started/: index.html
guides/configuration/: index.html
guides/embedding/: index.html
overrides/: main.html
schemas/: release.schema.json
search/: search_index.json
sqbyl-design-spec/: index.html
sqbyl-implementation-plan/: index.html
sqbyl-user-journey/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_annotate.py  test_annotate_collisions.py  test_annotate_reconcile.py  test_annotate_replay.py  test_anthropic_client.py  test_attention.py  test_base_url.py  test_cli_phase1.py  test_cli_phase2.py  test_cli_phase3.py  test_cli_phase4.py  test_coach.py  test_coach_heldout.py  test_concurrency.py  test_console.py  test_context_compiler.py  test_cost.py  test_db_readonly.py  test_dialects.py  test_eval_comparator.py  test_eval_guardrail.py  test_eval_report.py  test_eval_runner.py  test_eval_scorers.py  test_export.py  test_fingerprint.py  test_fixture_and_dogfood.py  test_importers.py  test_init.py  test_introspect.py  test_judges.py  test_kpis.py  test_llm_factory.py  test_llm_seam.py  test_models_roundtrip.py  test_models_validation.py  test_openai_client.py  test_openai_pipeline.py  test_optimize.py  (+26 more)
tests/cassettes/: annotate_orders.json  ask_narrate_total_orders.json  ask_total_orders.json  coach_measure.json  eval_dev.json  judge_dev.json  select_then_ask.json  serve_ask.json  synth_dev.json
tests/snapshots/: dogfood_context.txt
