[tool.uv.workspace]
members = ["packages/*"]

# Virtual workspace root: no [project] table — the root is not itself a
# distributable package, it only ties the two members together and owns the
# shared dev tooling. `uv sync` installs both members (editable) plus the dev group.

[dependency-groups]
dev = [
    "sqbyl",
    "sqbyl-runtime",
    "ruff>=0.6",
    "pytest>=8",
    "mypy>=1.11",
    "import-linter>=2.1",
    "pyyaml>=6",
    "types-pyyaml>=6",
]

[tool.uv.sources]
sqbyl = { workspace = true }
sqbyl-runtime = { workspace = true }

# ---------------------------------------------------------------------------
# Shared tool configuration (applies across both packages)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages/sqbyl/src", "packages/sqbyl-runtime/src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["packages/sqbyl/src", "packages/sqbyl-runtime/src"]
packages = ["sqbyl", "sqbyl_runtime"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["duckdb.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Import-linter: enforce the one-way dependency arrow.
# sqbyl -> sqbyl_runtime is allowed; the reverse must never happen.
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["sqbyl", "sqbyl_runtime"]

[[tool.importlinter.contracts]]
name = "sqbyl_runtime must not import the dev toolkit"
type = "forbidden"
source_modules = ["sqbyl_runtime"]
forbidden_modules = ["sqbyl"]

# Dev/test boundary (invariant 3, plan 3.4). Today the held-out set is guarded by code
# shape (test.yaml is loadable only via `sqbyl.eval.heldout`; `benchmarks_io`'s only
# public reader is the dev-hard-wired `load_dev_set` — the generic reader is private
# `_read_set`) plus a guardrail test. A `forbidden` import-linter contract can't be added
# cleanly yet: everything routes through the `sqbyl.project` substrate hub (which lazily
# imports the eval runner, which legitimately imports `heldout`), so a transitive-catching
# contract would false-positive.
#
# TODO (Phases 4–8): when `sqbyl.coach`, `sqbyl.synth`, and `sqbyl.optimize` land as their
# own modules, add a `forbidden` contract with those as source_modules and
# `sqbyl.eval.heldout` forbidden — those modules won't route through the Project hub the
# way `eval` does, so the held-out set becomes structurally unreachable by the loop that
# optimizes on dev. (Can't be added now — import-linter errors on nonexistent modules.)
