[tool.uv.workspace]
members = ["packages/*"]

# Virtual workspace root: no [project] table — the root is not itself a
# distributable package, it only ties the two members together and owns the
# shared dev tooling. `uv sync` installs both members (editable) plus the dev group.

[dependency-groups]
dev = [
    "sqbyl",
    "sqbyl-runtime",
    "ruff>=0.6",
    "pytest>=8",
    "mypy>=1.11",
    "import-linter>=2.1",
    "pyyaml>=6",
    "types-pyyaml>=6",
    # Drives the review console's Starlette TestClient in tests (no live server needed).
    "httpx>=0.27",
]

[tool.uv.sources]
sqbyl = { workspace = true }
sqbyl-runtime = { workspace = true }

# ---------------------------------------------------------------------------
# Shared tool configuration (applies across both packages)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages/sqbyl/src", "packages/sqbyl-runtime/src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    # Starlette's TestClient warns that its httpx backend is deprecated; not our concern.
    # No category given (the warning is a Starlette-specific class), so match by message.
    "ignore:Using `httpx` with `starlette.testclient`",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["packages/sqbyl/src", "packages/sqbyl-runtime/src"]
packages = ["sqbyl", "sqbyl_runtime"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["duckdb.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Import-linter: enforce the one-way dependency arrow.
# sqbyl -> sqbyl_runtime is allowed; the reverse must never happen.
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["sqbyl", "sqbyl_runtime"]

[[tool.importlinter.contracts]]
name = "sqbyl_runtime must not import the dev toolkit"
type = "forbidden"
source_modules = ["sqbyl_runtime"]
forbidden_modules = ["sqbyl"]

# Dev/test boundary (invariant 3, plan 3.4). The held-out `test.yaml` is reachable only
# via `sqbyl.eval.heldout`, so the loop that *optimizes on dev* (synth now; coach/optimize
# in later phases) must never import that module — otherwise it could read the very set
# whose score justifies a release, which is training on the test set.
#
# The `sqbyl.project` substrate hub lazily imports the eval runner inside `Project.eval`
# (the runner legitimately imports `heldout` — `eval` is the one allowed reader), so
# *everything* routes to `heldout` through that hub. We ignore only that single incidental
# hub edge (`project -> eval.runner`); every other path is real. So a synth/console module
# that imports `heldout` or the `runner` **directly** is still caught — the contract fails
# closed on an actual violation while permitting the sanctioned eval door.
[[tool.importlinter.contracts]]
name = "the dev-loop (synth/console/coach/init) cannot read the held-out test set"
type = "forbidden"
source_modules = ["sqbyl.synth", "sqbyl.console", "sqbyl.coach", "sqbyl.init"]
forbidden_modules = ["sqbyl.eval.heldout"]
ignore_imports = ["sqbyl.project -> sqbyl.eval.runner"]

# TODO (Phase 8): add `sqbyl.optimize` to `source_modules` above when that module lands —
# same rule, same reasoning. (Can't list it now: import-linter errors on nonexistent
# modules.) The Coach was promoted into this contract in Phase 5.3.
