[tool.uv.workspace]
members = ["packages/*"]

# Virtual workspace root: no [project] table — the root is not itself a
# distributable package, it only ties the two members together and owns the
# shared dev tooling. `uv sync` installs both members (editable) plus the dev group.

[dependency-groups]
dev = [
    "sqbyl",
    "sqbyl-runtime",
    # Both provider SDKs are optional extras of the runtime, but the dev/test env needs both
    # installed: the real-client unit tests build each SDK client via `_ensure_client()`.
    "anthropic>=0.117.0",
    "openai>=2.46.0",
    "ruff>=0.15.22",
    "pytest>=8",
    "mypy>=2.3.0",
    "import-linter>=2.13",
    "pyyaml>=6",
    "types-pyyaml>=6",
    # Drives the review console's Starlette TestClient in tests (no live server needed).
    "httpx>=0.27",
]
# Docs-site toolchain, isolated from the default dev env so `uv sync` stays lean.
# Build/preview with `uv run --group docs mkdocs serve` (or `mkdocs build`).
docs = [
    "mkdocs-material>=9.7.7",
]

[tool.uv.sources]
sqbyl = { workspace = true }
sqbyl-runtime = { workspace = true }

# ---------------------------------------------------------------------------
# Shared tool configuration (applies across both packages)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages/sqbyl/src", "packages/sqbyl-runtime/src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    # Starlette's TestClient warns that its httpx backend is deprecated; not our concern.
    # No category given (the warning is a Starlette-specific class), so match by message.
    "ignore:Using `httpx` with `starlette.testclient`",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["packages/sqbyl/src", "packages/sqbyl-runtime/src"]
packages = ["sqbyl", "sqbyl_runtime"]
explicit_package_bases = true

[[tool.mypy.overrides]]
# duckdb has no stubs; langchain_core is an optional export extra (lazily imported in
# sqbyl_runtime.export) that isn't installed in the dev/CI env.
module = ["duckdb.*", "langchain_core.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Import-linter: enforce the one-way dependency arrow.
# sqbyl -> sqbyl_runtime is allowed; the reverse must never happen.
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["sqbyl", "sqbyl_runtime"]

[[tool.importlinter.contracts]]
name = "sqbyl_runtime must not import the dev toolkit"
type = "forbidden"
source_modules = ["sqbyl_runtime"]
forbidden_modules = ["sqbyl"]

# Dev/test boundary (invariant 3, plan 3.4). The held-out `test.yaml` is reachable only
# via `sqbyl.eval.heldout`, so the loop that *optimizes on dev* (synth now; coach/optimize
# in later phases) must never import that module — otherwise it could read the very set
# whose score justifies a release, which is training on the test set.
#
# The `sqbyl.project` substrate hub lazily imports the eval runner inside `Project.eval`
# (the runner legitimately imports `heldout` — `eval` is the one allowed reader), so
# *everything* routes to `heldout` through that hub. We ignore only that single incidental
# hub edge (`project -> eval.runner`); every other path is real. So a synth/console module
# that imports `heldout` or the `runner` **directly** is still caught — the contract fails
# closed on an actual violation while permitting the sanctioned eval door.
[[tool.importlinter.contracts]]
name = "the dev-loop (synth/console/coach/init/optimize/importers) cannot read the held-out test set"
type = "forbidden"
source_modules = [
    "sqbyl.synth",
    "sqbyl.console",
    "sqbyl.coach",
    "sqbyl.coach_heldout",
    "sqbyl.init",
    "sqbyl.optimize",
    "sqbyl.importers",
]
# `eval.selection` (the 9.1 selection eval) is forbidden alongside `heldout`: it takes a
# caller-supplied question list, so a dev-loop module importing it could hand it `test.yaml`
# questions. The dev loop optimizes on dev only — it has no business scoring selection on the
# held-out set — so the safe structural guard is to keep the whole selection eval out of reach.
forbidden_modules = ["sqbyl.eval.heldout", "sqbyl.eval.selection"]
ignore_imports = ["sqbyl.project -> sqbyl.eval.runner"]

# `sqbyl.optimize` is held to the same rule (Phase 8.3): its coach→apply→eval loop only ever
# evaluates dev, and it scores the held-out set exactly once — on the picked version, through
# the sanctioned `Project.eval` door (the ignored `project -> eval.runner` edge), never by
# importing `heldout` directly. The Coach was promoted into this contract in Phase 5.3.
